# mahjong

./: Cargo.toml  README.md  ankan.ron  before-riichi.ron  before-ron.ron  before-tsumo.ron  chankan.ron  kokushimusou-chankan-ankan.ron  megayakuman.ron  nagashimangan-called.ron  nagashimangan.ron  pon.ron  riichi.ron  rinshankaihou.ron  shominkan.ron
src/: ai.rs  game.rs  list.rs  main.rs  points.rs  tiles.rs  yaku.rs
src/ai/: naive.rs  rurel.rs
