[package]
name = "mahjong"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.13"
env_logger = "0.7"
log = "0.4"
rand = "0.7"
ron = "0.5"
serde = "1.0"
serde_derive = "1.0"
