[package]
name = "mahjong"
version = "0.1.0"
authors = ["Malik Olivier Boussejra <malik@boussejra.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
cursive = "0.15"
env_logger = "0.7"
log = "0.4"
rand = "0.7"
ron = "0.8"
serde = "1.0"
serde_derive = "1.0"
